# milestone-3-4

./: .markdownlint.json  .nvimrc  CHANGELOG.md  README.md  STANDARDS.md  flake.nix  milestone34.cabal
src/: Bitwise.hs  Ed25519.hs  MyLib.hs  SHA512.hs
test/: Main.hs
